tests/errors/missing_return_statement.drast
// # TEST: missing return in non void function is rejected
// # EXPECT: error
// # ERROR_CONTAINS: return

main, int
	value = 1
